Update about page BOK description and fix title color for dark mode
- Balance BOK description to give equal weight to all research areas
- Change archive item title color to CSS variable for dark mode support

--- a/_sass/layout/_archive.scss
+++ b/_sass/layout/_archive.scss
@@ -48,7 +48,7 @@
   font-weight: 600;
 
   a {
-    color: #333;
+    color: var(--global-text-color);
   }
 
   a + a {
